<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintEnd_toEndOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@id/editTextPhoneNumber"
        app:layout_constraintEnd_toEndOf="@id/editTextPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>